# UrlShortener

./: .env.template  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: ci.yaml  deploy.yaml
scripts/: init-cessecrets-db.sh  init-slouka-db.sh
services/backend/: .env.template  Dockerfile  Dockerfile.dev  pyproject.toml
services/backend/src/: main.py
services/backend/src/api/controllers/: index.py  url.py
services/backend/src/api/schemas/: index.py  url.py
services/backend/src/core/: config.py  providers.py
services/backend/src/core/exceptions/: __init__.py  base.py  handlers.py  http.py
services/backend/src/core/models/: url.py
services/backend/src/core/services/: broker.py  url.py
services/backend/src/infra/: broker.py  database.py
services/backend/templates/: index.html
services/backend/tests/: test_broker_service.py  test_exception_handler.py  test_exceptions.py
services/generator/: .env.template  Dockerfile  Dockerfile.dev  pyproject.toml
services/generator/src/: main.py
services/generator/src/core/: config.py  exceptions.py  providers.py
services/generator/src/core/services/: slug.py
services/generator/src/handlers/: slug.py
services/generator/src/infra/: redis.py
services/generator/src/schemas/: slug.py
services/generator/tests/: conftest.py  test_exceptions.py  test_slug_generator.py  test_slug_pool.py
