[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "advanced-alchemy>=1.8.0",
    "asyncpg>=0.31.0",
    "faststream[nats]>=0.6.3",
    "hypercorn>=0.18.0",
    "jinja2>=3.1.0",
    "litestar>=2.18.0",
    "orjson>=3.11.4",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I"]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]

ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
